--- a/html-fundamentals/index.html
+++ b/html-fundamentals/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>The Basic Language of the Web: HTML</title>
+    <title>The Basic Language of the Web: HTML [TEST]</title>
 </head>
 
 <body>
